fr translation for virtualization.ovm

--- a/source/translated/fr/virtualization.ovm.po
+++ b/source/translated/fr/virtualization.ovm.po
@@ -22,11 +22,13 @@ msgid ""
 "Add the authentication information to /opt/opensvc/etc/auth.conf (check that "
 "this file is not world-readable)::"
 msgstr ""
+"Ajouter les informations d'autentification au fichier /opt/opensvc/etc/auth.conf "
+"(vérifier que ce fichier n'est pas lisible par tous) ::"
 
 # 90b8d28cfc914c54b5908b4dbf967aec
 #: ../../virtualization.ovm.rst:98
 msgid "Examples"
-msgstr ""
+msgstr "Exemples"
 
 # c62328d3e1204ba1868242e1c1269f80
 #: ../../virtualization.ovm.rst:47
@@ -34,16 +36,18 @@ msgid ""
 "For reference, Oracle Linux public repositories are available at http://"
 "public-yum.oracle.com/public-yum-ovm2.repo"
 msgstr ""
+"Pour mémoire, les dépôts publiques de Oracle Linux sont disponibles à "
+"http://public-yum.oracle.com/public-yum-ovm2.repo"
 
 # 86e8d33ac2934fddb28a70c571fbbfef
 #: ../../virtualization.ovm.rst:17
 msgid "HA enabled or disabled"
-msgstr ""
+msgstr "HA activé ou désactivé"
 
 # 5878c129e2fc4b4c8a96731b7bf395bf
 #: ../../virtualization.ovm.rst:25
 msgid "Install ovmcli"
-msgstr ""
+msgstr "Installer ovmcli"
 
 # d56732979b5e4a12afe83a778a41ebf8
 #: ../../virtualization.ovm.rst:27
@@ -51,31 +55,33 @@ msgid ""
 "Make sure you set up the following repositories in ``/etc/yum.conf`` or ``/"
 "etc/yum.repo.d/``::"
 msgstr ""
+"Assurez-vous de paramétrer les dépôts suivants dans ``/etc/yum.conf`` ou "
+"``/etc/yum.repo.d/`` ::"
 
 # fdeceafb5f92435b8cd81c1a15d3be57
 #: ../../virtualization.ovm.rst:130
 msgid "Migrate a OVM service"
-msgstr ""
+msgstr "Migrer un service OVM"
 
 # a834d2979d284d6b957ca45d2c354f0e
 #: ../../virtualization.ovm.rst:20
 msgid "OVM server configuration"
-msgstr ""
+msgstr "Configuration d'un serveur OVM"
 
 # ea3813b6e1324280a35f5d04621a8831
 #: ../../virtualization.ovm.rst:68
 msgid "OpenSVC node configuration"
-msgstr ""
+msgstr "Configuration OpenSVC du noeud"
 
 # e602184d30544a34a69d112a002ecff0
 #: ../../virtualization.ovm.rst:2
 msgid "Oracle VM"
-msgstr ""
+msgstr "Oracle VM"
 
 # 953ab83a1d604ddd96ba0724ce8f9d4e
 #: ../../virtualization.ovm.rst:8
 msgid "Oracle has a unique value proposition with OVM:"
-msgstr ""
+msgstr "Oracle dispose d'une offre originale avec OVM :"
 
 # 14a4792d494745b6a983d729d53f8e36
 #: ../../virtualization.ovm.rst:6
@@ -83,12 +89,16 @@ msgid ""
 "Oracle provides downloadable OVM server installation media and manager "
 "installation archives through its E-delivery website."
 msgstr ""
+"Oracle propose au téléchargement les média d'installation des serveurs "
+"OVM et du gestionnaire à travers le site E-delivery."
 
 # ae7502a7921a42c498b75d0b1aa5f6ff
 #: ../../virtualization.ovm.rst:12
 msgid ""
 "Oracle provides tuned and easily instanciable VM templates for those products"
 msgstr ""
+"Oracle met à disposition des images de machine virtuelle facilement instanciables "
+"avec ses produits applicatifs pré-installés."
 
 # 8544d31410a6427cae5cba5f06f9e43b
 #: ../../virtualization.ovm.rst:11
@@ -96,21 +106,23 @@ msgid ""
 "Oracle's products are certified on OVM (Oracle Linux, Solaris, database, "
 "PeopleSoft, middleware, ...)"
 msgstr ""
+"Les produits applicatifs d'Oracle sont certifiés sur OVM (Oracle Linux, Solaris, "
+"base de données, middleware, ...)"
 
 # 12fa17598f9b49eab93eb1bdc13a43ac
 #: ../../virtualization.ovm.rst:77
 msgid "Service configuration"
-msgstr ""
+msgstr "Configuration du service"
 
 # 736373fdce1d46e5bb67ec19663d3409
 #: ../../virtualization.ovm.rst:113
 msgid "Start a OVM service"
-msgstr ""
+msgstr "Démarrage d'un service OVM"
 
 # d0cad062591a43adbdbcf624c5ecd8f7
 #: ../../virtualization.ovm.rst:101
 msgid "Stop a OVM service"
-msgstr ""
+msgstr "Arrêt d'un service OVM"
 
 # 6f272e2211aa4a23a1d398f6a9952a3e
 #: ../../virtualization.ovm.rst:22
@@ -119,11 +131,14 @@ msgid ""
 "OpenSVC to handle service HA flag. This communication uses the ovmcli tool "
 "provided by Oracle."
 msgstr ""
+"Les serveurs OVM doivent pourvoir communiquer avec le gestionnaire "
+"afin qu'OpenSVC puisse prendre en charge la fonctionnalité HA. Cette "
+"communication utilise l'outil ovmcli fourni par Oracle."
 
 # 6d62e3efc0f249b48d5ab116d1482b49
 #: ../../virtualization.ovm.rst:14
 msgid "The OpenSVC driver for OVM supports:"
-msgstr ""
+msgstr "Le pilote OpenSVC pour OVM supporte :"
 
 # 87b95abd78314a5891a10b8f58a74fbd
 #: ../../virtualization.ovm.rst:4
@@ -134,6 +149,13 @@ msgid ""
 "called OVM servers. A OVM manager is mandatory to create OVM server pools "
 "and to configure per-VM failover policy."
 msgstr ""
+"L'infrastructure OVM est basée sur la technologie de virtualisation Xen et "
+"sur le gestionnaire de cluster d'Oracle. Les images de machine virtuelle sont "
+"stockées sous forme de fichiers sur un système de fichier réseau (NFS) ou sur "
+"le système de fichier cluster d'Oracle (OCFS2). Les hyperviseurs sont "
+"appelés serveurs OVM. Un gestionnaire OVM est nécessaire pour créer les "
+"grappes de serveurs OVM et pour configurer les politiques de reprise des "
+"VM."
 
 # 26c048d3625f4bcca03c08f8eab468f2
 #: ../../virtualization.ovm.rst:95
@@ -143,11 +165,15 @@ msgid ""
 "using svcmgr --cluster. OpenSVC will disable HA on stop and enable HA on "
 "start."
 msgstr ""
+"La ressource hb indique à OpenSVC que la machine virtuelle est configurée "
+"avec la haute disponibilité activée. Dans ce cas, les commandes manuelles "
+"sur le service doivent être passées avec le paramètre --cluster. OpenSVC "
+"désactivera HA lors des arrêts de service et le réactivera au démarrage."
 
 # 88d0add28d014ad0acb7ce836efc89d8
 #: ../../virtualization.ovm.rst:43
 msgid "Then you can install ovmcli with::"
-msgstr ""
+msgstr "Vous pouvez ensuite install ovmcli avec ::"
 
 # bc4b2f06e9d44f269959f50ac011c8aa
 #: ../../virtualization.ovm.rst:52
@@ -155,18 +181,21 @@ msgid ""
 "You have to run the :command:`ovm config` command one time. You will then be "
 "prompted for the manager's access information::"
 msgstr ""
+"Il est nécessaire de passer au moins une fois la commande :command:`ovm config`. "
+"Cette commande sollicite interactivement la saisie du compte utilisateur du "
+"gestionnaire et son mot de passe ::"
 
 # a17b99c1ec14465aa1a03f9dfb5b82c2
 #: ../../virtualization.ovm.rst:50
 msgid "ovmcli configuration"
-msgstr ""
+msgstr "configuration d'ovmcli"
 
 # 3176d9e755684d5aa636284aaa6ddf1f
 #: ../../virtualization.ovm.rst:16
 msgid "start, stop, migrate of virtual machines"
-msgstr ""
+msgstr "démarrage, arrêt, migration des machines virtuelles"
 
 # f2efe505172a406e9c1f4ceb2e58d400
 #: ../../virtualization.ovm.rst:10
 msgid "the billing is based on support"
-msgstr ""
+msgstr "seul le support est facturé"
