--- a/source/translated/fr/storage.netapp.po
+++ b/source/translated/fr/storage.netapp.po
@@ -23,6 +23,9 @@ msgid ""
 "syncs direction (in geocluster mode), or breaking-off the syncs (default "
 "disaster recovery mode)."
 msgstr ""
+"Promeut l'accès aux ressources snapmirror en lecture-écriture. Soit par "
+"inversion du sens de réplication (en mode geocluster), soit par arrêt "
+"des synchronisations (mode classique de plan de reprise d'activité)."
 
 # a6ce29ee2f7c4f729fb0a055649da68e
 #: ../../storage.netapp.rst:187
@@ -30,51 +33,53 @@ msgid ""
 "Append the keys to :file:`/nasprd/vol/vol0/etc/sshd/opensvc/.ssh/"
 "authorized_keys2`::"
 msgstr ""
+"Ajouter les clés au fichier :file:`/nasprd/vol/vol0/etc/sshd/opensvc/.ssh/"
+"authorized_keys2` ::"
 
 # 6215e0913a4349e1a01e2ea65d481fab
 #: ../../storage.netapp.rst:23
 msgid "Break-off the snapmirror resource."
-msgstr ""
+msgstr "Arrêt de la synchronisation d'une ressource snapmirror"
 
 # c03a0fc494d84be29ced5263f25367a0
 #: ../../storage.netapp.rst:205
 msgid "Check that target toaster hostname in present in the file"
-msgstr ""
+msgstr "Vérifier que le nom d'hôte de la cible, toaster, est présent dans le fichier"
 
 # f564a33d62124ed5af47a1fea8672312
 #: ../../storage.netapp.rst:5
 msgid "Command set"
-msgstr ""
+msgstr "Commandes"
 
 # dc502e8815584135aecd9a5ecc5a6360
 #: ../../storage.netapp.rst:119
 msgid "Create a role"
-msgstr ""
+msgstr "Créer un rôle"
 
 # d432d6eabdf843e081a4771d400fc23b
 #: ../../storage.netapp.rst:126
 msgid "Create account"
-msgstr ""
+msgstr "Créer un compte"
 
 # 01eb7b12bc604eb7863e74f48b540b61
 #: ../../storage.netapp.rst:272
 msgid "Diskstart in disaster recovery (split) mode"
-msgstr ""
+msgstr "Diskstart en situation de plan de reprise d'activité (split mode)"
 
 # e6cbc72a9b534e7d9845a471af102ce0
 #: ../../storage.netapp.rst:283
 msgid "Diskstart in multi-site cluster (swap) mode"
-msgstr ""
+msgstr "Diskstart en situation de cluster multi-sites (swap mode)"
 
 # 1073aa1aefe64ead897ca172cd8b880e
 #: ../../storage.netapp.rst:237
 msgid "Examples"
-msgstr ""
+msgstr "Exemples"
 
 # 62eb50c633914e129026390a549f7511
 #: ../../storage.netapp.rst:32
 msgid "Force flag"
-msgstr ""
+msgstr "Paramètre de forçage"
 
 # 49f4dbcf65784e2190c3a123f95475af
 #: ../../storage.netapp.rst:137
@@ -82,6 +87,8 @@ msgid ""
 "If the ssh setup has already been done skip the following command. Run "
 "secureadmin status to check."
 msgstr ""
+"Si la configuration ssh a déjà été réalisée, sauter la commande suivante. "
+"La commande secureadmin peut être lancée pour vérifier la configuration actuelle."
 
 # 4884375e7b1a45809bfc7d327b579540
 #: ../../storage.netapp.rst:59
@@ -91,21 +98,25 @@ msgid ""
 "file. The filer account must have snapmirror handling capabilities granted. "
 "Cluster mode"
 msgstr ""
+"Accès par clé ssh aux têtes de stockage. La paire de clés du compte root est "
+"utilisée par OpenSVC. La compte utilisé sur la tête de stockage peut être "
+"paramétré dans le fichier de configuration du service. Il doit avoir les "
+"habilitations pour utiliser snapmirror."
 
 # 1588d0bf40624a09a5a4352f4115dece
 #: ../../storage.netapp.rst:2
 msgid "Netapp"
-msgstr ""
+msgstr "Netapp"
 
 # 447485583c3146379207a7354ea344e8
 #: ../../storage.netapp.rst:116
 msgid "Netapp user account setup"
-msgstr ""
+msgstr "Configuration du compte Netapp"
 
 # b0a0c7e0fdc34565abacd87b7a94d474
 #: ../../storage.netapp.rst:199
 msgid "On Source toaster : Ensure target toaster is trusted"
-msgstr ""
+msgstr "Sur le toaster source : s'assurer que la cible toaster est autorisée"
 
 # f21802b4bfd741dfaf6c08c0c5111d9a
 #: ../../storage.netapp.rst:222
@@ -113,16 +124,18 @@ msgid ""
 "On Target toaster : Fill in the /etc/snapmirror.conf to specify the "
 "snapmirror policy"
 msgstr ""
+"Sur le toaster cible: renseigner le fichier /etc/snapmirror.conf pour "
+"qu'il définisse la politique snapmirror"
 
 # de517058acbc42319b6a3f814c0f64f9
 #: ../../storage.netapp.rst:215
 msgid "On Target toaster : Initialize snapmirror replication"
-msgstr ""
+msgstr "Sur le toaster cible : initialiser la replication snapmirror"
 
 # 9a6a449d5f3d40afad50e94da942f9c3
 #: ../../storage.netapp.rst:208
 msgid "On Target toaster : Restrict destination volume"
-msgstr ""
+msgstr "Sur le toaster cible : restreindre au volume cible"
 
 # 8ccb73109bd04b3188c014610e49561f
 #: ../../storage.netapp.rst:196
@@ -132,16 +145,21 @@ msgid ""
 "OpenSVC declines liability for your breaking your filers. For accurate "
 "information please refer to Netapp documentations."
 msgstr ""
+"OpenSVC n'assiste pas à l'initialisation du snapmirror. Les étapes "
+"nécessaires sont décrites ci-bas pour aider à démarrer la configuration "
+"d'un service. OpenSVC décline toute responsabilité en cas de corruption "
+"de vos données. Pour une documentation exhaustive sur le sujet, vous "
+"êtes encouragés à vous réferrer aux à la base documentaire de Netapp."
 
 # bf6fe616f0fa44eebfc2c166a282a07f
 #: ../../storage.netapp.rst:57
 msgid "Pre-requisites"
-msgstr ""
+msgstr "Pré-requis"
 
 # 5d54d03d95dd44049ff5911fc8bf307a
 #: ../../storage.netapp.rst:240
 msgid "Quiesce a replication"
-msgstr ""
+msgstr "Mise en pause d'une réplication"
 
 # 5c02fda43d10432198865690fb60de32
 #: ../../storage.netapp.rst:29
@@ -149,56 +167,58 @@ msgid ""
 "Re-establish the snapmirror synchronization using current destination as new "
 "source."
 msgstr ""
+"Rétablit la synchronisation snapmirror en utilisant la cible actuelle "
+"en tant que nouvelle source."
 
 # 4e4c430aa1ba43d8aee4b12e312b3c66
 #: ../../storage.netapp.rst:26
 msgid "Re-establish the snapmirror synchronization."
-msgstr ""
+msgstr "Déclenche une resynchronisation snapmirror."
 
 # 54c18f65c4544a2b8d8598aef0635246
 #: ../../storage.netapp.rst:248
 msgid "Resume a replication"
-msgstr ""
+msgstr "Rétablissement d'une réplication en pause"
 
 # 0f8f1fabdfe6423aac4655f46b4a67d3
 #: ../../storage.netapp.rst:20
 msgid "Resume snapmirror sync schedule (rollbacks the effect of quiesce)."
-msgstr ""
+msgstr "Restaure la planification de synchronisation du snapmirror (annule les effets de quiesce)."
 
 # de50b524e65a4763a4ba282039dcddb6
 #: ../../storage.netapp.rst:264
 msgid "Resync a replication"
-msgstr ""
+msgstr "Resynchronisation de la ressource"
 
 # bb4f21aca83c437598b6c07e34b10c00
 #: ../../storage.netapp.rst:71
 msgid "Service configuration file"
-msgstr ""
+msgstr "Fichier de configuration du service"
 
 # 7f60e1b170e0474294de4e6934af50bb
 #: ../../storage.netapp.rst:54
 msgid "Service configuration for Netapp"
-msgstr ""
+msgstr "Configuration d'un service pour Netapp"
 
 # a101d04d892c44678a1d9669771f9f0b
 #: ../../storage.netapp.rst:135
 msgid "Setup ssh key-based authentication"
-msgstr ""
+msgstr "Configuration de l'autentification par clé ssh"
 
 # 9708e5427a3742d6a388faaa597daa47
 #: ../../storage.netapp.rst:194
 msgid "Snapmirror configuration"
-msgstr ""
+msgstr "Configuration snapmirror"
 
 # 4589698efa2a40b4acb43c735a3e041d
 #: ../../storage.netapp.rst:256
 msgid "Split a replication"
-msgstr ""
+msgstr "Arrêt de la réplication"
 
 # ef4b40ab8aed4b67a6e80774298953fa
 #: ../../storage.netapp.rst:37
 msgid "Status"
-msgstr ""
+msgstr "Etats"
 
 # 8bdf9777225541079d92c371187c721f
 #: ../../storage.netapp.rst:34
@@ -207,6 +227,10 @@ msgid ""
 "exit on quiesce failure in the 'quiesce -> break' sequence. Be aware it "
 "means that the service will take over with a lagged data cursor."
 msgstr ""
+"Le paramètre --force est pris en compte par la commande 'start' uniquement. "
+"Il inhibe l'interruption sur échec de la séquence 'quiesce -> break'. Attention, "
+"cela signifie que le service va être démarré avec le dernier jeu de données "
+"reçu."
 
 # dfdc5266f6ea4a959e0842699d528960
 #: ../../storage.netapp.rst:68
@@ -215,6 +239,9 @@ msgid ""
 "host_mode`) : a PRD host mode implies the swap sync mode, otherwise the "
 "split sync mode is selected."
 msgstr ""
+"Le mode est déduit du 'host mode' du noeud (:file:`/opt/opensvc/var/"
+"host_mode`) : un host_mode à PRD implique que le sens de synchronisation sera "
+"inversé (swap mode), autrement la réplication sera arrêtée (split mode)."
 
 # 1fd71d113fcb4fea8d48e479f6482be8
 #: ../../storage.netapp.rst:234
@@ -223,6 +250,10 @@ msgid ""
 "replication directions are provisionned for swaps (one of them will appear "
 "as 'Uninitialized' in status)."
 msgstr ""
+"La planification est désactivée car les synchronisations sont prises en "
+"charge par OpenSVC et que les deux sens de réplications sont configurés "
+"pour les cas d'inversion de sens de réplication (l'un d'entre eux "
+"apparaîtra 'Uninitialized' dans les états)."
 
 # ca51c4a628be44d9833d3db1d6baa635
 #: ../../storage.netapp.rst:43
@@ -230,11 +261,13 @@ msgid ""
 "The snapmirror are in one of the following state: *   transfer is in "
 "progress *   lag is beyond sync_max_delay"
 msgstr ""
+"Les snapmirrors peuvent être dans l'un des états suivant : *    transfert "
+"en cours *   retard au-delà de sync_max_delay"
 
 # 3302edba679e4c5f87d10735b9c23c20
 #: ../../storage.netapp.rst:40
 msgid "The snapmirror are operational and the lag in under sync_max_delay"
-msgstr ""
+msgstr "Les snapmirror sont opérationnels et le retard est en-dessous de sync_max_delay"
 
 # 894861106c7441ceb3f226e775e84bfa
 #: ../../storage.netapp.rst:63
@@ -245,6 +278,13 @@ msgid ""
 "resources is considered volatile (still can be manually synchronized to the "
 "primary filer before failback to production node)."
 msgstr ""
+"C'est le mode par défaut de plan de reprise d'activité. En cas d'activation "
+"du service sur un noeud de DRP, les ressources snapmirror sont mises en pause "
+"si la tête de stockage maître est encore joignable, puis arrêtées. Les "
+"données écrites sur les disques répliqués durant un PRA sont considérées "
+"volatiles (bien qu'elle puissent être synchronisées vers la tête de stockage "
+"primaire par des commandes manuelles avant la procédure de retour des "
+"services sur les noeuds de production)."
 
 # c701b3bc41d74fbcbb2a6c1ae50e2e08
 #: ../../storage.netapp.rst:66
@@ -254,16 +294,21 @@ msgid ""
 "swapped to set the 'source' to the filer local to the secondary node taking "
 "over the service."
 msgstr ""
+"Ce mode est dédié aux clusters multi-sites. En cas l'activation du "
+"service sur un noeud secondaire, les ressources snapmirror sont mis "
+"en pause et leur sens de réplication est inversé pour que la 'source' "
+"soit tenue par la tête de stockage en affinité de localisation avec le "
+"noeud qui prend le service."
 
 # f31e88a5e54042039657c66543873959
 #: ../../storage.netapp.rst:14
 msgid "Trigger a snapmirror sync."
-msgstr ""
+msgstr "Déclenche une synchronisation snapmirror."
 
 # 82d3c8c84f3a4e63afb2580b3b89bfd9
 #: ../../storage.netapp.rst:17
 msgid "Trigger an ultimate snapmirror sync then suspend the resync scheduling."
-msgstr ""
+msgstr "Déclenche une ultime réplication snapmirror puis suspend la planification de resynchronisation"
 
 # c13d073ec19d43f98259382061c12d37
 #: ../../storage.netapp.rst:185
@@ -271,23 +316,26 @@ msgid ""
 "Trust all PRD nodes root public keys on all filers. Trust DRP nodes root "
 "public keys only on their local filer."
 msgstr ""
+"Autoriser toutes les clés des comptes root des noeuds de PRD sur toutes les "
+"têtes de stockage. Autorise les clés de comptes root des noeuds de DRP "
+"seulement sur leur tête de stockage en affinité de localisation."
 
 # c9e35aa1082b4a368f33922ff31950d1
 #: ../../storage.netapp.rst:183
 msgid "Trust keys"
-msgstr ""
+msgstr "Autorisation des clés"
 
 # 946cbd8d36bf43408d272c5251582cec
 #: ../../storage.netapp.rst:11
 msgid "noop"
-msgstr ""
+msgstr "sans effet"
 
 # 045668574ef64689b5c9190d9d922899
 #: ../../storage.netapp.rst:51
 msgid "resource is not in snapmirrored state"
-msgstr ""
+msgstr "la ressource n'est pas en état snapmirrored"
 
 # f22bd4752f9844cd911a95d28cacdd44
 #: ../../storage.netapp.rst:48
 msgid "slave filer is unreachable"
-msgstr ""
+msgstr "la tête de stockage esclave n'est pas joignable"
